<resources>
    <string name="app_name">Qardia</string>
    <string name="email_ro">Adresă de email</string>
    <string name="password_ro">Parolă</string>
    <string name="password_forgot_ro">Ați uitat parola?</string>
    <string name="login_ro">Autentificare</string>
    <string name="no_account_ro">Nu aveți un cont? Înregistrați-vă</string>
    <string name="welcome_back_ro">Bun venit</string>
    <string name="create_account_ro">Creați\ncont</string>
    <string name="first_name_ro">Prenume</string>
    <string name="last_name_ro">Nume</string>
    <string name="welcome_ro">Bun venit,\n%1$s</string>
    <string name="country_ro">Țara:</string>
    <string name="date_of_birth_ro">Data nașterii</string>
    <string name="day_of_birth_prompt_ro">Ziua</string>
    <string name="month_of_birth_prompt_ro">Luna</string>
    <string name="year_of_birth_prompt_ro">Anul</string>
    <string name="gender_ro">Sexul:</string>
    <string name="weight_ro">Greutate</string>
    <string name="height_ro">Înalțime</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="smoker_ro">Fumător</string>
    <string name="pregnant_ro">Sarcină</string>
    <string name="collect_data_ro">Înregistrare date</string>
    <string name="bp_and_hr_ro">Tensiune arterială și puls</string>
    <string name="recording_date_time_ro">Data și ora măsurării</string>
    <string name="date_ro">Data</string>
    <string name="hour_ro">Ora</string>
    <string name="systolic_ro">sistolică</string>
    <string name="diastolic_ro">diastolică</string>
    <string name="pulse_ro">puls</string>
    <string name="alcohol_usage_ro">Consum de alcool</string>
    <string name="cholesterol_ro">Colesterol</string>
    <string name="mgdl">mg/dl</string>
    <string name="medication_ro">Medicație</string>
    <string-array name="genders_array_ro">
        <item>Femeie</item>
        <item>Bărbat</item>
    </string-array>
    <string name="modify_ro">Modifică</string>
    <string name="no_internet_connection_ro">Nu există conexiune la internet</string>
    <string name="connect_to_internet_ro">Vă rugăm verificați conexiunea\nși încercați din nou.</string>
    <string name="try_again_ro">Reîncercare</string>
    <string name="sys_dash_ro">SYS</string>
    <string name="dia_dash_ro">DIA</string>
    <string name="pulse_dash_ro">Puls</string>
    <string name="cholesterol_dash_ro">Colesterol</string>
    <string name="bpm">bpm</string>
    <string name="mmhg">mmHg</string>
    <string name="max">max</string>
    <string name="last_week_ro">Ultima\nsăptămână</string>
    <string name="last_month_ro">Ultima\nlună</string>
    <string name="last_year_ro">Ultimul\nan</string>
    <string name="maximum_systolic_bp">Sistolic maxim</string>
    <string name="maximum_diastolic_bp">Diastolic maxim</string>
    <string name="value_ro">Valoare</string>
    <string name="save_ro">Salvează</string>
    <string name="bp_ro">Tensiunea arterială</string>
    <string name="the_pulse_ro">Pulsul</string>
    <string name="bp_temp_ro">Tensiune arterială - temperatură</string>
    <string name="bp_pressure_ro">Tensiune arterială - presiune atmosferică</string>
    <string name="bp_humidity_ro">Tensiune arterială - umiditate</string>
    <string name="bp_windspeed_ro">Tensiune arterială - viteza vântului</string>
    <string name="bp_stages_ro">Stadiile de hipertensiune</string>
    <string name="city_ro">Oraș</string>
    <string name="edit_profile_ro">Editează profil</string>
    <string name="sort_by_ro">Sortare după</string>
    <string name="recording_date_ro">Data înregistrării</string>
    <string name="blood_pressure_ro">Tensiune arterială</string>
    <string name="sort_ascending_ro">Crescător</string>
    <string name="sort_descending_ro">Descrescător</string>
    <string name="BMI">BMI</string>
    <string name="temperature_ro">Temperatură:</string>
    <string name="humidity_ro">Umiditate:</string>
    <string name="pressure_ro">Presiune:</string>
    <string name="nebulosity_ro">Nebulozitate:</string>
    <string name="logout_ro">Deconectare</string>
    <string name="correlation_coefficient_ro">Coeficientul de corelație</string>
    <string name="prediction_ro">Metode de predicție</string>
    <string name="linear_regression_ro">Regresie liniară</string>
    <string name="multilayer_perceptron_ro">Rețele neuronale</string>
    <string name="smoreg_ro">Regresie bazată pe\nvectori suport</string>
    <string name="current_weather_ro">Condițiile meteorologice curente</string>
    <string name="estimated_value_ro">Valoarea estimată</string>
</resources>
